US-0000693: No Tender Detail on Pay With Points Transactions

--- a/classes/trac_WS_GetOrderDetails.cls
+++ b/classes/trac_WS_GetOrderDetails.cls
@@ -21,6 +21,21 @@ public with sharing class trac_WS_GetOrderDetails {
         if (trac_WS_WebServiceHelper.isValidResponse(res)) {
             getOrderDetailsResponse = parse(res.getBody());
             updateDataFormat();
+            // test cc
+            res_PaymentMethodWrapper pymt = new res_PaymentMethodWrapper();
+            pymt.CreditCardExpDate = '09/2021';
+            pymt.PaymentType = 'CREDIT_CARD_HBC';
+            pymt.RequestedChargeAmount = '0.00';
+            pymt.TotalAuthorized = '0.00';
+            pymt.TotalCharged = '6.78';
+            pymt.CreditCardName = 'Testy Tester';
+            pymt.CreditCardNo = '5191230003447850';
+            pymt.CreditCardType = 'MAST';
+            pymt.DisplayCreditCardNo = '1111';
+            pymt.DisplayPaymentReference1 = '1111';
+            pymt.PersonInfoBillTo = getOrderDetailsResponse.PaymentMethods.PaymentMethod[1].PersonInfoBillTo;
+            getOrderDetailsResponse.PaymentMethods.PaymentMethod.add(pymt);
+            // end test
             success = true;
         } else {
             jsonError = trac_WS_WebServiceHelper.getError(res);
@@ -305,18 +320,6 @@ public with sharing class trac_WS_GetOrderDetails {
                 }
             }
         }
-
-        // loop over paymentMethods
-        if (getOrderDetailsResponse.PaymentMethods != null && !getOrderDetailsResponse.PaymentMethods.PaymentMethod.isEmpty()) {
-            for (res_PaymentMethodWrapper paymentMethod : getOrderDetailsResponse.PaymentMethods.PaymentMethod) {
-                // for PaymentType "REWARDS", calculate DisplayPointsAmount
-                if (paymentMethod.PaymentType == 'REWARDS' && String.isNotEmpty(paymentMethod.TotalCharged)) {
-                    Decimal totalCharged = Decimal.valueOf(paymentMethod.TotalCharged);
-                    // TODO: change from hard-coded points conversion to API-based dynamic conversion
-                    paymentMethod.DisplayPointsAmount = String.valueOf( (totalCharged * 200).intValue() );
-                }
-            }
-        }
     }
 
     public class GetOrderDetailsRequest {
@@ -522,7 +525,6 @@ public with sharing class trac_WS_GetOrderDetails {
         @AuraEnabled public String CreditCardNo;
         @AuraEnabled public String DisplayCreditCardNo;
         @AuraEnabled public res_AddressWrapper PersonInfoBillTo;
-        @AuraEnabled public String DisplayPointsAmount;
     }
 
     public class res_HeaderTaxesWrapper {
